# starfish

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  raft.md
.claude/commands/: audit-docs.md  audit-test-coverage.md  check-design-drift.md  fix-bug.md  gen-test-stubs.md  review-local.md  sync-design-index.md  sync-docs-crate.md  sync-docs.md  sync-test-docs.md
.claude/reviewers/: architecture.md  correctness.md  documentation.md  safety.md  testing.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN-INDEX.md  proposal-skiptree.md
starfish-core/: Cargo.toml  README.md
starfish-core/docs/: bugs.md  eng.md  iterators-and-range-queries.md  skip_trie.md  upsert.md
starfish-core/src/: lib.rs
starfish-core/src/common_tests/: bench_utils.rs  map_collection_core_tests.rs  mod.rs  sorted_collection_core_tests.rs  sorted_collection_stress_tests.rs
starfish-core/src/data_structures/: README.md  iterable_collection.rs  map_entry.rs  mod.rs  ordered_iterator.rs  pair.rs
starfish-core/src/data_structures/hash/: hash_map_collection.rs  map_collection.rs  mod.rs  safe_hash_map_collection.rs  split_ordered_hash_map.rs
starfish-core/src/data_structures/internal/: atomic_ptr.rs  marked_ptr.rs  marked_ptr_3bit.rs  mod.rs  sorted_collection.rs  unpublished_node.rs
starfish-core/src/data_structures/sorted/: mod.rs  safe_sorted_collection.rs  skip_list.rs  sorted_list.rs  sorted_list_backlinks_protocol.rs  treap.rs
starfish-core/src/data_structures/trie/: mod.rs  skip_trie.rs  y_fast_trie.rs
starfish-core/src/data_structures/wrappers/: deferred_collection.rs  deferred_collection_iter.rs  deferred_hash_map.rs  mod.rs
starfish-core/src/guard/: deferred_guard.rs  mod.rs
starfish-core/src/preemptive_synchronization/: countdown_event.rs  future_extension.rs  mod.rs
starfish-core/tests/: collection_stress_tests.rs  deferred_collection_tests.rs  map_collection_tests.rs  sorted_list_stress_tests.rs  split_ordered_hash_map_tests.rs
starfish-crossbeam/: Cargo.toml  README.md
starfish-crossbeam/benches/: hash_map_benchmark.rs  indexset_concurrent.rs  sorted_collection_benchmark.rs  upsert_operations.rs  y_fast_trie_benchmark.rs
starfish-crossbeam/docs/: benchmarks.md  bugs.md  profile.md
starfish-crossbeam/src/: epoch_guard.rs  epoch_guarded_collection_iter.rs  epoch_guarded_hash_map.rs  epoch_guarded_sorted_collection.rs  guarded_ref.rs  lib.rs
starfish-crossbeam/tests/: epoch_guarded_collection_tests.rs  range_queries_test.rs  skip_list_map_epoch.rs  skip_list_pair_epoch.rs  skip_trie_map_epoch.rs  sorted_list_map_epoch.rs  y_fast_trie_tests.rs
starfish-db/: Cargo.toml  README.md
starfish-db/src/: lib.rs
starfish-epoch/: Cargo.toml  README.md
starfish-epoch/docs/: bugs.md  epoch-domains.md
starfish-epoch/src/: epoch.rs  epoch_alloc.rs  lib.rs
starfish-epoch/tests/: epoch_test.rs
starfish-http/: Cargo.toml  README.md
starfish-http/docs/: bugs.md
starfish-http/fuzz/: Cargo.toml
starfish-http/fuzz/fuzz_targets/: h3_frame_decode.rs  qpack_decode.rs
starfish-http/src/: client.rs  content_coding.rs  error.rs  http_client.rs  lib.rs  pool.rs  server.rs
starfish-http/src/h1/: chunked.rs  client.rs  connection.rs  encoder.rs  mod.rs  parser.rs  server.rs
starfish-http/src/h3/: client.rs  connection.rs  error.rs  frame.rs  mod.rs  server.rs
starfish-http/src/h3/qpack/: decoder.rs  encoder.rs  mod.rs
starfish-http/tests/: h1_integration.rs  h3_integration.rs  h3_interop_aioquic.rs  h3_interop_quiche.rs  http_client_integration.rs  http_client_test.rs
starfish-http/tests/interop/: aioquic_h3_client.py  aioquic_h3_server.py  run_h3_interop.py
starfish-quic/: Cargo.toml  README.md
starfish-quic/docs/: bugs.md
starfish-quic/src/: client.rs  connection.rs  error.rs  lib.rs  server.rs  stream.rs
starfish-quic/src/crypto/: aead.rs  header_protection.rs  keys.rs  mod.rs
starfish-quic/src/frame/: ack.rs  crypto.rs  mod.rs  stream.rs
starfish-quic/src/packet/: handshake.rs  header.rs  initial.rs  mod.rs  one_rtt.rs  retry.rs  version_negotiation.rs  zero_rtt.rs
starfish-quic/src/recovery/: congestion.rs  cubic.rs  loss_detection.rs  mod.rs  new_reno.rs
starfish-quic/src/transport/: connection_id.rs  flow_control.rs  mod.rs  stream_manager.rs
starfish-quic/tests/: quic_integration.rs
starfish-reactor/: Cargo.toml  README.md
starfish-reactor/benches/: lock_benchmark.rs  reactor_benchmark.rs  readme.md
starfish-reactor/docs/: bugs.md  reactor-idle-sleep.md
starfish-reactor/src/: completion_signaler.rs  coordinator.rs  lib.rs  rc_pointer.rs  reactor.rs
starfish-reactor/src/cooperative_io/: async_read.rs  async_write.rs  file.rs  file_open_options.rs  io_manager.rs  io_timeout.rs  mod.rs  tcp_listener.rs  tcp_stream.rs  udp_socket.rs
starfish-reactor/src/cooperative_io/io_linux/: io_file.rs  io_network.rs  io_wait_future.rs  mod.rs  uring_io_manager.rs
starfish-reactor/src/cooperative_io/io_macos/: io_file.rs  io_network.rs  io_wait_future.rs  kqueue_io_manager.rs  mod.rs
starfish-reactor/src/cooperative_io/io_windows/: completion_port_io_manager.rs  io_file.rs  io_network.rs  io_wait_future.rs  iocp.rs  mod.rs  pooling_io_manager.rs
starfish-reactor/src/cooperative_synchronization/: delayed_future.rs  event_future.rs  init_barrier.rs  lock.rs  mod.rs  wait_one_future.rs
starfish-reactor/tests/: coordinator_test.rs  io_file_test.rs  io_networking_test.rs  io_uring_lifecycle_test.rs  lock_tests.rs  reactor_idle_test.rs  reactor_test.rs
starfish-storage/: Cargo.toml  README.md
starfish-storage/docs/: bugs.md  mvcc-skiplist.md
starfish-storage/src/: lib.rs
starfish-storage/src/data_structures/: mod.rs
starfish-tls/: Cargo.toml  README.md
starfish-tls/docs/: bugs.md
starfish-tls/src/: accept_any_server_cert_verifier.rs  error.rs  lib.rs  tls_client.rs  tls_server.rs
starfish-tls/tests/: tls_client_test.rs
