[package]
name = "starfish-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary-heap-plus = "0.5.0"
ctor = "0.4.1"
fastrand = "2.3.0"
mimalloc = "0.1.47"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.5"
parking_lot = "0.12"
rstest = "0.18"
serial_test = "3.2.0"

[features]
default = ["sorted_collection_core_tests"]
sorted_collection_core_tests = []