[package]
name = "starfish-core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.3.0"
rand = "0.9.2"

[dev-dependencies]
criterion = "0.5"
parking_lot = "0.12"
rstest = "0.18"
static_assertions = "1.1"
serial_test = "3.2.0"

[features]
default = ["sorted_collection_core_tests", "map_collection_core_tests"]
sorted_collection_core_tests = []
map_collection_core_tests = []
bench_utils = []
