[package]
name = "starfish-reactor"
version = "0.1.0"
edition = "2024"

[dependencies]
starfish-core = { version = "0.1.0", path = "../starfish-core" }
binary-heap-plus = "0.5.0"
crossbeam = "0.8.4"
ctor = "0.4.1"
mimalloc = { version = "0.1.48", features = ["v3"] }
rand = "0.9.2"
socket2 = "0.5.8"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.170"
kqueue-sys = "1.0.4"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.4"
libc = "0.2.170"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_Networking",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
criterion = "0.5"
rstest = "0.18"

[[bench]]
name = "reactor_benchmark"
harness = false

[[bench]]
name = "lock_benchmark"
harness = false
