[package]
name = "starfish-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
fastrand = "2.3.0"
mimalloc = "0.1.47"
rand = "0.9.2"
starfish-core = { version = "0.1.0", path = "../starfish-core" }
starfish-epoch = { version = "0.1.0", path = "../starfish-epoch" }

[dev-dependencies]
criterion = "0.5"
parking_lot = "0.12"
rstest = "0.18"
serial_test = "3.2.0"

[profile.release]
debug = true
